add doctor info

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -202,4 +202,14 @@ input {
     padding: 10px 0;
     border-bottom: 1px solid $gray-lighter;
   }
+
+}
+
+// fotter
+.copyright {
+    width: 400px;
+}
+
+.right {
+    margin-left: auto;
 }
