--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,13 @@
 <% provide(:title, "ポートフォリオ") %>
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+<div class="jumbotron">
+  <div class="container">
+    <h1>My Sample App</h1>
 
-  <h2>
-    This is the home page for the
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
+    <h2>
+    </h2>
+    <div class="signup-link">
+      <%= link_to "今すぐ登録", signup_path %>
+    </div>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
 </div>
