--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -5,6 +5,6 @@
 
 <form>
   <label>コメント:</label><br>
-  <input id="comment" type="text" data-behavior="room_speaker" class="chat-spk">
+  <textarea id="comment"　class="chat-spk"></textarea>
   <button id="send-btn" type="button" class="btn btn-success btn-sm">送信</button>
 </form>
